--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="en">
+
  <head>
 	<title>Cameron Aaron</title>
 	  	<meta charset="UTF-8">
@@ -6,7 +7,11 @@
 		<meta name="keywords" content="Cameron Aaron" />
 		<meta name="author" content="Cameron Aaron" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0;">
-	  	<link href="css/style.css" rel="stylesheet">
+		<meta name="theme-color" content="#495266"/>
+
+
+	<link href="css/style.css" rel="stylesheet">
+	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -45,7 +50,7 @@
 				</div>
 			</div>
 			<!-- Essentials Illustration -->
-			<div id="illustration" style="text-align: center;"><img src="img/me.jpg"></div>
+			<div id="illustration" style="text-align: center;"><img src="img/me.jpg" alt="Cameron Aaron"></div>
 			<!-- About Me -->
 			<div id="about"><div class="inner">
 				<p>Cameron Aaron is a native of Studio City, CA and graduated from Bridges Academy with a young expert designation after doing Neuroscience and Artificial intelligence research. He is a Junior at Connecticut College in New London, CT and a former Software Engineer at GitHub a subsidiary of Microsoft. Cameron is a double major in Computer Science and Psychology with a minor in Cognitive Science and a Scholar in the Ammerman Center of Arts and Technology. He conducts both Artificial intelligence and Cognitive Neuroscience research. He is currently the head of special events at the Connecticut College TED Club and is in charge of the youth event TEDxYouth@NewLondon. He is a Google product Expert and is currently a moderator for the official Google Android Beta subreddit.</p><br/><br/><br/>
@@ -88,7 +93,7 @@
 				<p class="section-tagline" style="text-align:left;">Education</p>
 				<!-- Résumé : Education : Conncoll -->
 				<p>
-					<a target="_blank" href="www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg"></a><b>Connecticut College</b>
+					<a target="_blank" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
 					<span class="right"><i>2017 - 2021</i></span><br/><b>Computer Science and Psychology</b>
 					<span class="right"><i>New London, CT</i></span><br/><br/>
 						Relevant Coursework:<br/>
@@ -113,7 +118,7 @@
 				<br/>
 				<!-- Résumé : Education : Coursera -->
 				<p>
-					<a target="_blank" href="http://www.coursera.com/‎"><img class="icon" src="img/companies/coursera.svg"></a><b>Coursera</b>
+					<a target="_blank" href="http://www.coursera.com/‎"><img class="icon" src="img/companies/coursera.svg" alt="Coursera"></a><b>Coursera</b>
 					Specialzations:<br/>
 				<ul style="list-style:circle;">
 					<li>Cloud Engineering with GCP by
@@ -135,7 +140,7 @@
 
 				<!-- Résumé : Work Experience : Connecticut College -->
 				<p>
-					<a target="_blank" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg"></a><b>Connecticut College</b>
+					<a target="_blank" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
 					<span class="right"><i>2017-Current</i></span><br/>
 					<b>Summer Science Research Institute Bioinformatics and Computational Biology Researcher/Computational Biology and Informatics Researcher
 					/CameLAB Neuroscience Lab Research Assistant/Cyber Security and Network Infrastructure Researcher/Robotics and Artificial Intelligence Lab Manager/Artificial Intelligence Research Associate
@@ -161,7 +166,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : c19 -->
 				<p>
-					<a target="_blank" href="https://c19bayshield.org/"><img class="icon" src="img/companies/c19.png"></a><b>C19 Bayshield </b>
+					<a target="_blank" href="https://c19bayshield.org/"><img class="icon" src="img/companies/c19.png" alt="Connecticut College"></a><b>C19 Bayshield </b>
 					<span class="right"><i>2012 - 2013</i></span><br/>
 					<b>Backend Engineering Team Lead </b>
 					<span class="right"><i>Los Angeles, CA</i></span><br/><br/>
@@ -173,7 +178,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : GitHub -->
 				<p>
-					<a target="_blank" href="http://www.github.com"><img class="icon" src="img/companies/GitHub.png"></a><b>GitHub</b>
+					<a target="_blank" href="http://www.github.com"><img class="icon" src="img/companies/GitHub.png" alt="GitHub"></a><b>GitHub</b>
 					<span class="right"><i>Summer 2019</i></span><br/>
 					<b>Software Engineer </b>
 					<span class="right"><i>San Francisco, CA</i></span><br/><br/>
@@ -192,23 +197,18 @@
 				<br/>
 				<!-- Résumé : Work Experience : bardoVr -->
 				<p>
-					<a target="_blank" href="https://www.bardovr.com/"><img class="icon" src="img/companies/bardo.png"></a><b>BardoVR</b>
+					<a target="_blank" href="https://www.bardovr.com/"><img class="icon" src="img/companies/bardo.png" alt="Bardovr"></a><b>BardoVR</b>
 					<span class="right"><i>Spring 2020</i></span><br/>
 					<b>Community Engagement Intern</b>
 					<span class="right"><i>Berkley, CA</i></span><br/><br/>
 				<ul style="list-style:circle;">
-					<br> Building Immersive Media Experiences To Promote Health & Wellbeing. We are starting with AfterDeath AfterDeath is a game-based, interactive virtual reality simulation of the Tibetan Book of the Dead, which describes the journey consciousness takes from the moment of death until its rebirth in another form. Using the mechanism of an immersive psychedelic “trip” through otherworldly environments, AfterDeath will be both a unique gaming experience and a pathway to understanding personal attitudes, desires, and aversions.
-
-				The Vision:
-				Our goal is to create an awe-inspiring immersive “game” that is also a profound tool for psychological and spiritual development.
-				The interactive modalities described in the Tibetan Book of the Dead train us to employ calm focus, equanimity, and compassion to attain more blissful states. These will become successful strategies in the AFTERDEATH “game”.
-				Future enhancements will include multiple levels and environments, and the incorporation of increasingly sophisticated interactive technologies, including bio, neuro and haptic feedback.</br>
+					<br> Building Immersive Media Experiences To Promote Health & Wellbeing. We are starting with AfterDeath AfterDeath is a game-based, interactive virtual reality simulation of the Tibetan Book of the Dead, which describes the journey consciousness takes from the moment of death until its rebirth in another form. Using the mechanism of an immersive psychedelic “trip” through otherworldly environments, AfterDeath will be both a unique gaming experience and a pathway to understanding personal attitudes, desires, and aversions. Our goal is to create an awe-inspiring immersive “game” that is also a profound tool for psychological and spiritual development. The interactive modalities described in the Tibetan Book of the Dead train us to employ calm focus, equanimity, and compassion to attain more blissful states. These will become successful strategies in the AFTERDEATH “game”. Future enhancements will include multiple levels and environments, and the incorporation of increasingly sophisticated interactive technologies, including bio, neuro and haptic feedback.</br>
 				</ul>
 				</p>
 				<br/>
 				<!-- Résumé : Work Experience : Google -->
 				<p>
-					<a target="_blank" href="http://www.google.com"><img class="icon" src="img/companies/google.png"></a><b>Google</b>
+					<a target="_blank" href="http://www.google.com"><img class="icon" src="img/companies/google.png" alt="Google"></a><b>Google</b>
 					<span class="right"><i>2017-Current</i></span><br/>
 					<b>Product Expert Google Fi and Google Pixel</b>
 					<span class="right"><i>San Francisco, CA</i></span><br/><br/>
@@ -217,7 +217,7 @@
 				</ul>
 				</p>
 				<p>
-					<a target="_blank" href="http://www.ted.com"><img class="icon" src="img/companies/ted.png"></a><b>TED</b>
+					<a target="_blank" href="http://www.ted.com"><img class="icon" src="img/companies/ted.png" alt="TED"></a><b>TED</b>
 					<span class="right"><i>2015 -Current</i></span><br/>
 					<b>TED -Ed Club Leader and Head of Special Events TEDxConnecticut College Organizer TEDxYouth@Newlondon  </b>
 					<span class="right"><i>New York, NY</i></span><br/><br/>
@@ -234,7 +234,7 @@
 				<p class="tagline">Work + Fun</p>
 		
 				<div class="portfolio-thumb portfolio-big">
-					<a class="image-popup-no-margins" href="img/portfolio/ammerman.png"><img src="img/portfolio/ammerman.png"></a>
+					<a class="image-popup-no-margins" href="img/portfolio/ammerman.png"><img src="img/portfolio/ammerman.png" alt="Ammerman Center"></a>
 					<p class="description"><b>Magic Mirror</b>&nbsp;&nbsp; Ammerman Center Project creating a magic mirror that displays info about a persons genome from 23 and me Raw data.</p>
 				</div>
 				</div>
@@ -248,55 +248,7 @@
 					<a target="_blank" href="https://www.instagram.com/cameronaaronofficial/">Instagram</a>
 				</span>
 			</div></div>
-
-		<script type="text/javascript">
-		 $(document).ready(function() {
-		        $('.image-popup-no-margins').magnificPopup({
-		          type: 'image',
-		          closeOnContentClick: true,
-		          closeBtnInside: false,
-		          fixedContentPos: true,
-		          mainClass: 'mfp-no-margins mfp-with-zoom', // Class to remove default margin from left and right side
-		          image: {
-		            verticalFit: true
-		          },
-		          zoom: {
-		            enabled: true,
-		            duration: 300 // Duration variable also in CSS
-		          }
-		        });
-
-		         $('.popup-youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
-		          disableOn: 700,
-		          type: 'iframe',
-		          mainClass: 'mfp-fade',
-		          removalDelay: 160,
-		          preloader: false,
-
-		          fixedContentPos: false
-		        });
-
-		        $('.simple-ajax-popup-align-top').magnificPopup({
-		          type: 'ajax',
-		          alignTop: true,
-		          overflowY: 'scroll' // as we know that popup content is tall we set scroll overflow by default to avoid jump
-		        });
-
-		        $('.simple-ajax-popup').magnificPopup({
-		          type: 'ajax'
-		        });
-		      });
-		</script>
 		<script>
-		// call the plugin on the "#toc" element
-		$('#toc').fixedTOC({
-			menuOpens: 'click', // or 'mouseenter'
-			scrollSpeed: 1000,
-			menuSpeed: 300,
-			useSubMenus: false,
-			resetSubMenus: false,
-			topLinkWorks: true
-		});
 		</script>
 	</body>
 </html>
