--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html lang="en">
+<!DOCTYPE html >
+<html lang="en">
 
  <head>
 	<title>Cameron Aaron</title>
@@ -15,7 +16,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-40199662-7"></script>
 	<script>
@@ -26,20 +27,20 @@
 		gtag('config', 'UA-40199662-7');
 	</script>
 
-</head>
-	<body>
-		<!-- Navigation -->
-		<div id="toc-holder" class="toc-holder">
-			<a href="index.html#" class="toc-link" id="toc-link"><span>&#9776;</span></a>
-			<ul id="toc" class="toc">
-				<li class="toc-h1"><a href="index.html#about">About</a></li>
-				<li class="toc-h1"><a href="index.html#resume">Résumé</a></li>
-				<li class="toc-h1"><a href="index.html#work">Work</a></li>
-			</ul>
-		</div>
+ </head>
+ <body>
+ <!-- Navigation -->
+ <div id="toc-holder" class="toc-holder">
+	 <a href="index.html#" class="toc-link" id="toc-link"><span>&#9776;</span></a>
+	 <ul id="toc" class="toc">
+		 <li class="toc-h1"><a href="index.html#about">About</a></li>
+		 <li class="toc-h1"><a href="index.html#resume">Résumé</a></li>
+		 <li class="toc-h1"><a href="index.html#work">Work</a></li>
+	 </ul>
+ </div>
 
-		<div id="page-wrapper">
-			<!-- Header -->
+ <div id="page-wrapper">
+	 <!-- Header -->
 			<div id="header">
 				<div class="inner name"><a href="index.html#illustration">Cameron Aaron</a></div>
 				<div class ="nav">
@@ -114,7 +115,7 @@
 									<li>Entertainment Software Design</li>
 									<li>Machine Learning</li>
 								</ul>
-					<span class="skill">Python</span><span class="skill">Java</span><span class="skill">Ruby on Rails</span><span class="skill">Flutter</span><span class="skill">Git</span></p>
+					<span class="skill">Python</span><span class="skill">Java</span><span class="skill">Ruby on Rails</span><span class="skill">Flutter</span><span class="skill">Git</span>
 				<br/>
 				<!-- Résumé : Education : Coursera -->
 				<p>
@@ -162,7 +163,6 @@
 					<li>Working on Double Robot,Hardware NN and Autonomous MIP projects in the lab of Computer Science Chair Professor Gary Parker.</li>
 				</ul>
 				<br/>
-				</p>
 				<br/>
 				<!-- Résumé : Work Experience : c19 -->
 				<p>
@@ -174,7 +174,6 @@
 
 				</ul>
 				<br/>
-				</p>
 				<br/>
 				<!-- Résumé : Work Experience : GitHub -->
 				<p>
@@ -193,7 +192,6 @@
 					<li>Worked on GitHub.com </li>
 					<li>Worked in Ruby on Rails</li>
 				</ul>
-				</p>
 				<br/>
 				<!-- Résumé : Work Experience : bardoVr -->
 				<p>
@@ -202,9 +200,18 @@
 					<b>Community Engagement Intern</b>
 					<span class="right"><i>Berkley, CA</i></span><br/><br/>
 				<ul style="list-style:circle;">
-					<br> Building Immersive Media Experiences To Promote Health & Wellbeing. We are starting with AfterDeath AfterDeath is a game-based, interactive virtual reality simulation of the Tibetan Book of the Dead, which describes the journey consciousness takes from the moment of death until its rebirth in another form. Using the mechanism of an immersive psychedelic “trip” through otherworldly environments, AfterDeath will be both a unique gaming experience and a pathway to understanding personal attitudes, desires, and aversions. Our goal is to create an awe-inspiring immersive “game” that is also a profound tool for psychological and spiritual development. The interactive modalities described in the Tibetan Book of the Dead train us to employ calm focus, equanimity, and compassion to attain more blissful states. These will become successful strategies in the AFTERDEATH “game”. Future enhancements will include multiple levels and environments, and the incorporation of increasingly sophisticated interactive technologies, including bio, neuro and haptic feedback.</br>
+					<br> Building Immersive Media Experiences To Promote Health & Wellbeing. We are starting with
+					AfterDeath AfterDeath is a game-based, interactive virtual reality simulation of the Tibetan Book of
+					the Dead, which describes the journey consciousness takes from the moment of death until its rebirth
+					in another form. Using the mechanism of an immersive psychedelic “trip” through otherworldly
+					environments, AfterDeath will be both a unique gaming experience and a pathway to understanding
+					personal attitudes, desires, and aversions. Our goal is to create an awe-inspiring immersive “game”
+					that is also a profound tool for psychological and spiritual development. The interactive modalities
+					described in the Tibetan Book of the Dead train us to employ calm focus, equanimity, and compassion
+					to attain more blissful states. These will become successful strategies in the AFTERDEATH “game”.
+					Future enhancements will include multiple levels and environments, and the incorporation of
+					increasingly sophisticated interactive technologies, including bio, neuro and haptic feedback.
 				</ul>
-				</p>
 				<br/>
 				<!-- Résumé : Work Experience : Google -->
 				<p>
@@ -213,9 +220,9 @@
 					<b>Product Expert Google Fi and Google Pixel</b>
 					<span class="right"><i>San Francisco, CA</i></span><br/><br/>
 				<ul style="list-style:circle;">
-					<br> Works as a volunteer on the Google product forums to help answer user questions. I was recognized for my good service by being asked by Google to join the product expert program</br>
+					<br> Works as a volunteer on the Google product forums to help answer user questions. I was
+					recognized for my good service by being asked by Google to join the product expert program
 				</ul>
-				</p>
 				<p>
 					<a target="_blank" href="http://www.ted.com"><img class="icon" src="img/companies/ted.png" alt="TED"></a><b>TED</b>
 					<span class="right"><i>2015 -Current</i></span><br/>
@@ -226,7 +233,6 @@
 					<li>Brainstormed new events for the club</li>
 					<li>Manages community service</li>
 				</ul>
-				</p>
 				<br/><br/><br/><br/>
 			</div></div>
 			<!-- Portfolio -->
@@ -239,8 +245,8 @@
 				</div>
 				</div>
 				</div>
-			</div></div>
-			<div  id ="footer"><div class="inner">
+			</div>
+		<div  id ="footer"><div class="inner">
 				© 2020 Cameron Aaron.
 				<span class="right">
 					<a target="_blank" href="mailto:cameronaaron1@gmail.com">Email</a>&nbsp;//&nbsp;
