--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 												 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; endDate: "Jan 2020"<br/>
 							<br/></span>
 							&gt; Cameron.resume<br/>
-							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" href="resume.pdf">Cameron_Aaron_Resume.pdf</a>"<br/><br/></span>
+							<span class="answer">&nbsp;&nbsp;=&gt; "<a target="_blank" rel="noopener noreferrer"  href="resume.pdf">Cameron_Aaron_Resume.pdf</a>"<br/><br/></span>
 							&gt; Cameron.thoughts<br/>
-							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="http://www.twitter.com/CameronAaron4">@CameronAaron</a>",
-								 "<a target="_blank" href="https://www.instagram.com/cameronaaronofficial/">Instagram</a>"</span>
+							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" rel="noopener noreferrer" href="https://www.twitter.com/CameronAaron4">@CameronAaron</a>",
+								 "<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/cameronaaronofficial/">Instagram</a>"</span>
 							&gt; Cameron.email<br/>
 							<span class="answer">&nbsp;&nbsp;=&gt; ["<a target="_blank" href="mailto:cameronaaron1@gmail.com">cameronaaron1@gmail.com</a>"<br/><br/></span>
 						</div>
@@ -94,7 +94,7 @@
 				<p class="section-tagline" style="text-align:left;">Education</p>
 				<!-- Résumé : Education : Conncoll -->
 				<p>
-					<a target="_blank" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
 					<span class="right"><i>2017 - 2021</i></span><br/><b>Computer Science and Psychology</b>
 					<span class="right"><i>New London, CT</i></span><br/><br/>
 						Relevant Coursework:<br/>
@@ -119,7 +119,7 @@
 				<br/>
 				<!-- Résumé : Education : Coursera -->
 				<p>
-					<a target="_blank" href="http://www.coursera.com/‎"><img class="icon" src="img/companies/coursera.svg" alt="Coursera"></a><b>Coursera</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.coursera.com/‎"><img class="icon" src="img/companies/coursera.svg" alt="Coursera"></a><b>Coursera</b>
 					Specialzations:<br/>
 				<ul style="list-style:circle;">
 					<li>Cloud Engineering with GCP by
@@ -141,7 +141,7 @@
 
 				<!-- Résumé : Work Experience : Connecticut College -->
 				<p>
-					<a target="_blank" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.conncoll.edu"><img class="icon" src="img/companies/conncoll.jpg" alt="Connecticut College"></a><b>Connecticut College</b>
 					<span class="right"><i>2017-Current</i></span><br/>
 					<b>Summer Science Research Institute Bioinformatics and Computational Biology Researcher/Computational Biology and Informatics Researcher
 					/CameLAB Neuroscience Lab Research Assistant/Cyber Security and Network Infrastructure Researcher/Robotics and Artificial Intelligence Lab Manager/Artificial Intelligence Research Associate
@@ -166,7 +166,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : c19 -->
 				<p>
-					<a target="_blank" href="https://c19bayshield.org/"><img class="icon" src="img/companies/c19.png" alt="Connecticut College"></a><b>C19 Bayshield </b>
+					<a target="_blank" rel="noopener noreferrer" href="https://c19bayshield.org/"><img class="icon" src="img/companies/c19.png" alt="Connecticut College"></a><b>C19 Bayshield </b>
 					<span class="right"><i>2012 - 2013</i></span><br/>
 					<b>Backend Engineering Team Lead </b>
 					<span class="right"><i>Los Angeles, CA</i></span><br/><br/>
@@ -177,7 +177,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : GitHub -->
 				<p>
-					<a target="_blank" href="http://www.github.com"><img class="icon" src="img/companies/GitHub.png" alt="GitHub"></a><b>GitHub</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.github.com"><img class="icon" src="img/companies/GitHub.png" alt="GitHub"></a><b>GitHub</b>
 					<span class="right"><i>Summer 2019</i></span><br/>
 					<b>Software Engineer </b>
 					<span class="right"><i>San Francisco, CA</i></span><br/><br/>
@@ -195,7 +195,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : bardoVr -->
 				<p>
-					<a target="_blank" href="https://www.bardovr.com/"><img class="icon" src="img/companies/bardo.png" alt="Bardovr"></a><b>BardoVR</b>
+					<a target="_blank" rel="noopener noreferrer" href="https://www.bardovr.com/"><img class="icon" src="img/companies/bardo.png" alt="Bardovr"></a><b>BardoVR</b>
 					<span class="right"><i>Spring 2020</i></span><br/>
 					<b>Community Engagement Intern</b>
 					<span class="right"><i>Berkley, CA</i></span><br/><br/>
@@ -215,7 +215,7 @@
 				<br/>
 				<!-- Résumé : Work Experience : Google -->
 				<p>
-					<a target="_blank" href="http://www.google.com"><img class="icon" src="img/companies/google.png" alt="Google"></a><b>Google</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.google.com"><img class="icon" src="img/companies/google.png" alt="Google"></a><b>Google</b>
 					<span class="right"><i>2017-Current</i></span><br/>
 					<b>Product Expert Google Fi and Google Pixel</b>
 					<span class="right"><i>San Francisco, CA</i></span><br/><br/>
@@ -224,7 +224,7 @@
 					recognized for my good service by being asked by Google to join the product expert program
 				</ul>
 				<p>
-					<a target="_blank" href="http://www.ted.com"><img class="icon" src="img/companies/ted.png" alt="TED"></a><b>TED</b>
+					<a target="_blank" rel="noopener noreferrer" href="http://www.ted.com"><img class="icon" src="img/companies/ted.png" alt="TED"></a><b>TED</b>
 					<span class="right"><i>2015 -Current</i></span><br/>
 					<b>TED -Ed Club Leader and Head of Special Events TEDxConnecticut College Organizer TEDxYouth@Newlondon  </b>
 					<span class="right"><i>New York, NY</i></span><br/><br/>
@@ -249,9 +249,9 @@
 		<div  id ="footer"><div class="inner">
 				© 2020 Cameron Aaron.
 				<span class="right">
-					<a target="_blank" href="mailto:cameronaaron1@gmail.com">Email</a>&nbsp;//&nbsp;
-					<a target="_blank" href="https://www.linkedin.com/in/kamisama/">LinkedIn</a>&nbsp;//&nbsp;
-					<a target="_blank" href="https://www.instagram.com/cameronaaronofficial/">Instagram</a>
+					<a target="_blank" rel="noopener noreferrer" href="mailto:cameronaaron1@gmail.com">Email</a>&nbsp;//&nbsp;
+					<a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/kamisama/">LinkedIn</a>&nbsp;//&nbsp;
+					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/cameronaaronofficial/">Instagram</a>
 				</span>
 			</div></div>
 		<script>
