--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
           rel='stylesheet' type='text/css'>
     <!-- FontAwesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Nivo Lightbox-->
     <!-- Main CSS -->
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Themes -->
@@ -38,16 +37,11 @@
     <!--<link rel="stylesheet" href="assets/css/custom.css">-->
     <!-- jQuery -->
 
-    <script src="assets/js/jquery.min.js">
-    </script>
-    <!-- dense.js (Retina plugin) -->
-
-    <!-- Nivo Lightbox -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- ScrollReveal -->
 
-    <script src="assets/js/scrollreveal.min.js">
-    </script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Main JS -->
 
     <script src="assets/js/main.js">
@@ -229,7 +223,6 @@
         <!-- ################################ -->
         <!-- ############# MEDIA ############ -->
         <!-- ################################ -->
-        <section> class="o-section t-section">
             <div class="o-section__header-bg t-section__header"></div>
             <div class="o-section__content-bg t-section__content"></div>
             <div class="o-container">
@@ -476,13 +469,12 @@
                                                         </div>
                                                     </ul>
                                                 </div>
-                                                </li>
+                                                </div>
         </section>
         <!-- /o-section -->
         <!-- ############################### -->
         <!-- ########## EDUCATION ########## -->
         <!-- ############################### -->
-        <section> class="o-section t-section">
             <div class="o-section__header-bg t-section__header"></div>
             <div class="o-section__content-bg t-section__content"></div>
             <div class="o-container">
@@ -560,7 +552,6 @@
                                                     <li>Google Cloud Architecting with Google Compute Engine</li>
                                                     <li>Cloud Engineering with GCP by Google Cloud</li>
                                                     <li>Architecting with Google Compute Engine</li>
-                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -634,7 +625,7 @@
                         <ul class="c-footer__social-buttons  c-social-buttons  o-content__body">
                             <li class="a-footer">
                                 <a class="c-social-button t-social-button"
-                                   href="https://docs.google.com/document/d/1liAQsxaqnO957od7gUMuj-iBJMgxyYS38-cZd6nI-3Q/edit?usp=sharing"
+                                   href="resume.pdf"
                                    target="_blank"><i class="fa fa-lg fa-file"></i></a>
                             </li>
                             <li class="a-footer">
@@ -662,10 +653,6 @@
     <!-- /o-container -->
 
 </section>
-<!-- /o-section -->
-
-</div>
-<!-- /c-main-container -->
 
 </body>
 
