--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KM6Z4E12R3"></script>
     <script>
@@ -15,6 +16,7 @@
 
         gtag('config', 'G-KM6Z4E12R3');
     </script>
+    <meta name="theme-color" content="#317EFB"/>
     <title>Hi, my name is Cameron</title>
     <meta content="Cameron Aaron is a native of Studio City, CA, and graduated from Bridges Academy with a young expert designation after doing Neuroscience and Artificial intelligence research. He is a Senior at Connecticut College in New London, CT, and a former Software Engineer at GitHub, a subsidiary of Microsoft. Cameron is a double major in Computer Science and Psychology with a minor in Cognitive Science and a Scholar in the Ammerman Center of Arts and Technology. He conducts both Artificial intelligence and Cognitive Neuroscience research. He is currently the head of special events at the Connecticut College TED Club and is in charge of the youth event TEDxYouth@NewLondon. He is a Google product Expert and is currently a moderator for the official Google Android Beta subreddit. Most recently, Cameron joined the team at SpaceX, working in Aerospace Medicine.
 " name="Description">
@@ -99,12 +101,12 @@
                                     </li>
                                     <li class="a-header">
                                         <a class="c-social-button t-social-button"
-                                           href="https://www.linkedin.com/in/kamisama/" target="_blank"><i
+                                           href="https://www.linkedin.com/in/kamisama/" target="_blank" rel="noopener noreferrer">   <i
                                                 class="fa fa-lg fa-linkedin"></i></a>
                                     </li>
                                     <li class="a-header">
                                         <a class="c-social-button t-social-button"
-                                           href="https://github.com/cameronaaron/" target="_blank"><i
+                                           href="https://github.com/cameronaaron/" target="_blank" rel="noopener noreferrer"><i
                                                 class="fa fa-lg fa-github"></i></a>
                                     </li>
                                 </ul>
@@ -139,7 +141,7 @@
                                     <div class="o-grid__col-md-3 o-grid__col-sm-6">
                                         <div class="a-header o-content">
                                             <div class="o-content__body">
-                                                <a class="t-link-container" href="#" target="_blank">
+                                                <a class="t-link-container" href="#" target="_blank" rel="noopener noreferrer">
                                                     <h4>Email</h4>
                                                     <p><span class="t-link-container__item--blended">cameronaaron1@gmail.com</span>
                                                     </p>
@@ -240,19 +242,19 @@
                         <ul class="c-clients o-content">
                             <li>
                                 <a href="https://www.conncoll.edu/news/news-archive/2020/a-dozen-internships/"
-                                   target="_blank"><img alt="" src="assets/images/clients/conn.png"></a>
+                                   target="_blank" rel="noopener noreferrer"><img alt="" src="assets/images/clients/conn.png"></a>
                             </li>
                             <li>
                                 <a href="https://medium.com/@cameronaaron/creating-the-perfect-fit-turning-add-into-an-asset-3d9c556fc9d3"
-                                   target="_blank"><img alt="" src="assets/images/clients/2e.png"></a>
+                                   target="_blank" rel="noopener noreferrer"><img alt="" src="assets/images/clients/2e.png"></a>
                             </li>
                             <li>
-                                <a href="https://internships.github.com/interns/2019/cameron" target="_blank"><img
-                                        alt=""
+                                <a href="https://internships.github.com/interns/2019/cameron" target="_blank" rel="noopener noreferrer"><img
+                                        alt="GitHub"
                                         src="assets/images/clients/github.png"></a>
                             </li>
                             <li>
-                                <a href="https://medium.com/@cameronaaron" target="_blank"><img alt=""
+                                <a href="https://medium.com/@cameronaaron" target="_blank" rel="noopener noreferrer"><img alt="Medium"
                                                                                                 src="assets/images/clients/med.png"></a>
                             </li>
                             <li>
@@ -626,15 +628,15 @@
                             <li class="a-footer">
                                 <a class="c-social-button t-social-button"
                                    href="resume.pdf"
-                                   target="_blank"><i class="fa fa-lg fa-file"></i></a>
+                                   target="_blank" rel="noopener noreferrer"><i class="fa fa-lg fa-file"></i></a>
                             </li>
                             <li class="a-footer">
                                 <a class="c-social-button t-social-button" href="https://www.linkedin.com/in/kamisama/"
-                                   target="_blank"><i class="fa fa-lg fa-linkedin"></i></a>
+                                   target="_blank" rel="noopener noreferrer"><i class="fa fa-lg fa-linkedin"></i></a>
                             </li>
                             <li class="a-footer">
                                 <a class="c-social-button t-social-button" href="https://github.com/cameronaaron/"
-                                   target="_blank"><i class="fa fa-lg fa-github"></i></a>
+                                   target="_blank" rel="noopener noreferrer"><i class="fa fa-lg fa-github"></i></a>
                             </li>
                         </ul>
                         <!-- /c-footer__social-buttons -->
