--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 
         gtag('config', 'G-KM6Z4E12R3');
     </script>
-    <meta name="theme-color" content="#317EFB"/>
     <title>Hi, my name is Cameron</title>
     <meta content="Cameron Aaron is a native of Studio City, CA, and graduated from Bridges Academy with a young expert designation after doing Neuroscience and Artificial intelligence research. He is a Senior at Connecticut College in New London, CT, and a former Software Engineer at GitHub, a subsidiary of Microsoft. Cameron is a double major in Computer Science and Psychology with a minor in Cognitive Science and a Scholar in the Ammerman Center of Arts and Technology. He conducts both Artificial intelligence and Cognitive Neuroscience research. He is currently the head of special events at the Connecticut College TED Club and is in charge of the youth event TEDxYouth@NewLondon. He is a Google product Expert and is currently a moderator for the official Google Android Beta subreddit. Most recently, Cameron joined the team at SpaceX, working in Aerospace Medicine.
 " name="Description">
-
+    <meta name="theme-color" content="#317EFB"/>
     <meta content="" name="description">
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta content="ie=edge" http-equiv="x-ua-compatible">
     <!-- Google Font: Lato -->
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&subset=latin,latin-ext'
+    <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&subset=latin,latin-ext&display=swap'
           rel='stylesheet' type='text/css'>
     <!-- FontAwesome -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -34,9 +33,6 @@
     <link href="assets/css/main.css" rel="stylesheet">
     <!-- Themes -->
     <link href="assets/css/themes.light.css" rel="stylesheet">
-    <!--<link rel="stylesheet" href="assets/css/themes.dark.css">-->
-    <!-- Custom CSS -->
-    <!--<link rel="stylesheet" href="assets/css/custom.css">-->
     <!-- jQuery -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
